--- a/1.html
+++ b/1.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
 <head>
+  <title>WEB1 - html</title>
+  <meta charset="utf-8">
 
-
-<title>WEB1 - html</title>
-<meta charset="utf-8">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -13,6 +12,9 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
 </ol>
+
+
+
 <h2>HTML</h2>
   <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/TUVXiINIwQM" title="YouTube video player" frameborder="0"   allow=allowfullscreen></iframe>
@@ -63,7 +65,7 @@ html <title>Home</title>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
 <P>
-    <<a href="https://opentutorials.org">opentutorials</a>
+    <a href="https://opentutorials.org">opentutorials</a>
 </P>
 </body>
 </html>
