--- a/2.html
+++ b/2.html
@@ -8,17 +8,30 @@
    color:black;
    text-decoration: none;
    } 
+   #active{
+     color:red;
+   }
+   .saw {
+     color:gray;
+   }
+   
+   h1{
+     font-size:50px;
+     text-align:center;
+   }
   </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html" style="color:aquamarine;text-decoration: underline;">CSS</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" active id="active">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
 </ol>
 
 <!--
+style="color:aquamarine;text-decoration: underline;"
+
   <h1><a href="index.html"><font color="red">WEB</font></a></h1>
   <ol>
     <li><a href="1.html"><font color="red">HTML</font></a></li>
